syntax = "proto3";

package packingcmdpb;
option go_package = "./packingcmdpb";

// FO
message CreatePackingRequest {
    string user_id = 1;
    int32 line_id = 2;
    int32 machine_id = 3;
    int32 status_sync = 4;
    string observation_datetime = 5;
    int32 unit_id = 6;
    int32 department_id = 7;
    int32 area_id = 8;
}
message CreatePackingResponse {
    int64 id = 1;
}

// FO
message CreateEquipmentCheckingRequest {
    int32 id_equipment_checking_list = 1;
    int32 id_packaging_check = 2;
    int32 id_asset_equipment = 3;
    string photo = 4;
    int32 condition = 5;
    string note = 6;
    int32 status = 7;
    string observation_datetime = 8;
}
message CreateEquipmentCheckingResponse {
    int64 id = 1;
}

// AO
message UpdateEquipmentCheckingRequest {
    int64 id = 1;
    int32 ao_conclusion = 2;
    string ao_note = 3;
    string ao_observation_datetime = 4;
    string ao_id = 5;
}
message UpdateEquipmentCheckingResponse {
    int64 id = 1;
}

service PackingCmdService {
    // FO
    rpc CreatePacking(CreatePackingRequest) returns (CreatePackingResponse) {};
    rpc CreateEquipmentChecking(CreateEquipmentCheckingRequest) returns (CreateEquipmentCheckingResponse) {};
    // AO
    rpc UpdateEquipmentChecking(UpdateEquipmentCheckingRequest) returns (UpdateEquipmentCheckingResponse) {};
}